# ed25519-dalek-blake2b

./: Cargo.toml
benches/: ed25519_benchmarks.rs
src/: batch.rs  keypair.rs  lib.rs  public.rs  secret.rs  signature.rs
tests/: ed25519.rs
