[package]
name = "ed25519-dalek-blake2b"
version = "1.0.1"
edition = "2018"
authors = ["rmw <i@rmw.link>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/rmw-lib/ed25519-dalek-blake2b"
homepage = "https://dalek.rs"
documentation = "https://docs.rs/ed25519-dalek"
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
categories = ["cryptography", "no-std"]
description = "fork ed25519-dalek , replace sha512 to blake2b"
exclude = [ ".gitignore", "TESTVECTORS", "res/*" ]

[badges]
travis-ci = { repository = "dalek-cryptography/ed25519-dalek", branch = "master"}

[package.metadata.docs.rs]
# Disabled for now since this is borked; tracking https://github.com/rust-lang/docs.rs/issues/302
# rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/curve25519-dalek-0.13.2/rustdoc-include-katex-header.html"]
features = ["nightly", "batch"]

[dependencies]
curve25519-dalek = { version = "3.0.2", default-features = false }
ed25519 = { version = "1.0.3", default-features = false }
merlin = { version = "3.0.0", default-features = false, optional = true }
rand = { version = "0.8.3", default-features = false, optional = true }
rand_core = { version = "0.6.2", default-features = false, optional = true }
serde_crate = { package = "serde", version = "1.0.123", default-features = false, optional = true }
serde_bytes = { version = "0.11.5", optional = true }
zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }
blake2 = "0.9.1"

[dev-dependencies]
hex = "0.4.2"
bincode = "1.3.1"
serde_json = "1.0.62"
criterion = "0.3.4"
rand = "0.8.3"
serde_crate = { package = "serde", version = "1.0.123", features = ["derive"] }
toml = "0.5.8"

[[bench]]
name = "ed25519_benchmarks"
harness = false
# This doesn't seem to work with criterion, cf. https://github.com/bheisler/criterion.rs/issues/344
# For now, we have to bench by doing `cargo bench --features="batch"`.
# required-features = ["batch"]

[features]
default = [ "rand", "u64_backend"]
alloc = ["curve25519-dalek/alloc", "rand/alloc", "zeroize/alloc"]
nightly = ["curve25519-dalek/nightly"]
serde = ["serde_crate", "serde_bytes", "ed25519/serde"]
batch = ["merlin", "rand"]
# This feature enables deterministic batch verification.
batch_deterministic = ["merlin", "rand", "rand_core"]
# This features turns off stricter checking for scalar malleability in signatures
legacy_compatibility = []
u64_backend = ["curve25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
simd_backend = ["curve25519-dalek/simd_backend"]
